<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="action_settings">Settings</string>
    <string name="startgame">开始游戏</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
	<string name="yourscore">当前的分数是：</string>
	<string name="bestscore">最高分为：</string>
	<string name="username">用户名：</string>
	<string name="password">密&#160;&#160;&#160;码：</string>
	<string name="username_help">请输入用户名！</string>
	<string name="password_help">请输入密码！</string>
	<string name="restart">重新开始</string>
</resources>
