<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="28sp"
	    android:text="@string/username"
	    />

	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/username_help" 
	    android:id="@+id/username">
	</EditText>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="28sp"
	    android:text="@string/password"
	    />

	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:hint="@string/password_help"
	    android:id="@+id/password"
	     >
	</EditText>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/login"
	    android:padding="5sp"
	    android:layout_marginLeft="20sp"
	    android:layout_marginRight="20sp"
	    android:id="@+id/btLogin"
	    />
	<Button  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/register"
	    android:padding="5sp"
	    android:layout_marginLeft="20sp"
	    android:layout_marginRight="20sp"
	    android:id="@+id/btRegister"
	    />
	</LinearLayout>
</LinearLayout>
